Fix: add function detail in project

--- a/compromisso/templates/compromisso/index.html
+++ b/compromisso/templates/compromisso/index.html
@@ -9,20 +9,19 @@
 	{% if compromissos_list %}
 		{% for compromisso in compromissos_list %}
 			{% if compromisso.horario|date:"M, d, Y" == data_hoje|date:"M, d, Y" %}
-				<b>Descrição do compromisso: {{ compromisso.descricao }}</b> <br>
+				<b>Descrição do compromisso: {{ compromisso.descricao|truncatechars:20 }}</b> <br>
 				<b>Horário: {{ compromisso.horario }}</b> <br>
-				<b><a href="/">Detalhes:</a></b> <br> <!-- para mostrar tudo sobre o compromisso -->
+				<b><a href="{% url 'compromisso:detalhe' compromisso.id %}">Detalhes:</a></b> <br>
 			{% else %}
-				<p>Descrição do compromisso: {{ compromisso.descricao }}</p>
+				<p>Descrição do compromisso: {{ compromisso.descricao|truncatechars:20 }}</p>
 				<p>Horário: {{ compromisso.horario }}</p>
-				<p><a href="/">Detalhes:</a></p>
+				<p><a href="{% url 'compromisso:detalhe' compromisso.id %}">Detalhes:</a></p>
 			{% endif %}
 			<p>------------</p>
 		{% endfor %}
 	{% else %}
 		<p>Nenhuma mensagem cadastrada</p>
 	{% endif %}
-
 
 	<a href="http://localhost:8000/admin/">Painel Admin</a>
 </body>
